cabal-version:       >=1.10
name:                org-roam-to-obsidian
version:             0.1.0
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable org-roam-to-obsidian
  main-is:             Main.hs
  build-depends:       base >=4.14 && <4.15
  default-language:    Haskell2010
