cabal-version:       >=1.10
name:                org-roam-to-obsidian
version:             0.1.0
build-type:          Simple

executable org-roam-to-obsidian
  main-is:             Main.hs
  build-depends:
    base >=4.13 && <5,
    org-mode >=1.1.0 && <2,
    text >=1.2 && <3,
    containers >=0.6.2 && <0.7,
    directory >=1.3 && <2,
    strict >= 0.3 && < 0.4
  default-language:    Haskell2010
